Cambiar apps por riesgos en el perfil

--- a/AppRiesgosPersonales/app/src/main/res/layout/rv_apps_app.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/rv_apps_app.xml
@@ -57,7 +57,7 @@
             android:layout_marginLeft="5dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="@string/appAdded"
+            android:text="@string/dElementAdded"
             android:textSize="12dp"
             tools:text="Añadida"/>
     </LinearLayout>
