--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_control_detail.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_control_detail.xml
@@ -60,7 +60,7 @@
             android:layout_marginRight="24dp"
             android:layout_marginBottom="2dp"
             android:background="@drawable/button"
-            android:text="@string/app_detail_add"
+            android:text="@string/dElement_detail_add"
             android:textAllCaps="false" />
 
     </LinearLayout>
