--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_perfil_controles.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_perfil_controles.xml
@@ -6,7 +6,7 @@
     android:layout_marginBottom="15dp">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/controlesAplicados_rv"
+        android:id="@+id/itemsAplicados_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
