--- a/AppRiesgosPersonales/app/src/main/res/layout/rv_riesgos_riesgo.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/rv_riesgos_riesgo.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:padding="4dp"
     android:layout_margin="8dp">
 
@@ -18,7 +18,8 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/riesgoIcon_iv"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="4dp"
         android:layout_centerVertical="true"
         android:orientation="vertical">
 
@@ -42,12 +43,12 @@
 
     <ImageView
         android:id="@+id/arrow_iv"
+        style="@style/RecyclerIconStyle"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@drawable/arrow_forward"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
-        style="@style/RecyclerIconStyle"/>
+        android:src="@drawable/arrow_forward" />
 
 </RelativeLayout>
