Añadir separaciones entre Apps y Dispositivos
Se ha modificado el servicio y la aplicacion para que en los catalogos de elementos, riesgos
y controles se pueda separar entre apps y dispositivos.

--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_controles.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_controles.xml
@@ -1,11 +1,20 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context="es.unican.appriegospersonales.activities.controles.ControlesView">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/controles_rv"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/controles_tl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</FrameLayout>
+        android:layout_height="wrap_content"
+        app:tabGravity="fill"
+        app:tabMode="fixed" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/controles_vp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
