--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_riesgos.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_riesgos.xml
@@ -1,13 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context="es.unican.appriegospersonales.activities.riesgos.RiesgosView">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/riesgos_rv"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/riesgos_tl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        app:tabGravity="fill"
+        app:tabMode="fixed" />
 
-</FrameLayout>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/riesgos_vp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
 
