--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_element_detail.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_element_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="es.unican.appriegospersonales.activities.apps.detail.DElementDetailView">
+    tools:context="es.unican.appriegospersonales.activities.apps.detail.AssetDetailView">
 
     <LinearLayout
         android:layout_width="wrap_content"
