--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_element_detail.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_element_detail.xml
@@ -98,7 +98,7 @@
         android:text="@string/dElement_detail_riesgos_title"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:text="Riesgos" />
+        tools:text="Buenas prácticas" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/appDetail_riesgos_rv"
