Cambiar forma de acceder al servicio
Se accede al servicio mediante Retrofit y se mapea a clases
del modelo deserializando con Gson.

--- a/AppRiesgosPersonales/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/AppRiesgosPersonales/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,8 @@
         android:id="@+id/page_perfil"
         android:icon="@drawable/ic_baseline_person_24"
         android:title="@string/bottom_nav_perfil"/>
+    <item
+        android:id="@+id/page_smart_home"
+        android:icon="@drawable/baseline_smart_toy_24"
+        android:title="@string/bottom_nav_smart_home"/>
 </menu>
