--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_smart_home.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_smart_home.xml
@@ -115,6 +115,8 @@
             <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/cves_pc"
                 android:layout_width="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
