--- a/AppRiesgosPersonales/app/src/main/res/values/dimens.xml
+++ b/AppRiesgosPersonales/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="divider" tools:ignore="MissingDefaultResource">6dp</dimen>
     <dimen name="text_margin">16dp</dimen>
 
+    <dimen name="thumb_size">24dp</dimen>
+    <dimen name="thumb_text_size">15sp</dimen>
 </resources>
