--- a/AppRiesgosPersonales/app/src/main/res/layout/rv_perfil_app.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/rv_perfil_app.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:layout_marginRight="8dp">
+    android:layout_marginRight="8dp"
+    android:padding="8dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_appAddedIcon_iv"
@@ -25,7 +25,7 @@
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
@@ -34,19 +34,9 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/riesgoIcon_iv"
-                style="@style/RecyclerIconStyle"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_marginEnd="6dp"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/circle" />
 
             <TextView
                 android:id="@+id/appAddedName_tv"
@@ -62,20 +52,71 @@
                 style="@style/RecyclerIconStyle"
                 android:layout_width="13dp"
                 android:layout_height="13dp"
-                android:layout_marginStart="6dp"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical"
+                android:layout_marginStart="6dp"
                 android:src="@drawable/check_circle" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/assetAddedVuln_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="22dp"
-            android:inputType="textMultiLine"
-            android:textSize="15sp"
-            tools:text="x vulnerabilidades" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/riesgoIcon_iv"
+                    style="@style/RecyclerIconStyle"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="6dp"
+                    android:src="@drawable/circle" />
+
+                <TextView
+                    android:id="@+id/assetAddedVuln_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:inputType="textMultiLine"
+                    android:textSize="15sp"
+                    tools:text="x vulnerabilidades" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/ecoIcon_iv"
+                    style="@style/RecyclerIconStyle"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="6dp"
+                    android:src="@drawable/energy_saving" />
+
+                <TextView
+                    android:id="@+id/assetAddedEco_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:inputType="textMultiLine"
+                    android:textSize="15sp"
+                    tools:text="Sostenibilidad" />
+
+            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
