Añadir calificación ecológica en detalle de dispositivo

--- a/AppRiesgosPersonales/app/src/main/res/layout/rv_perfil_app.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/rv_perfil_app.xml
@@ -113,7 +113,7 @@
 
                     android:inputType="textMultiLine"
                     android:textSize="15sp"
-                    tools:text="Sostenibilidad" />
+                    tools:text="35/100 eco" />
 
             </LinearLayout>
         </LinearLayout>
