--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail.xml
@@ -16,12 +16,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="20dp">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_margin="24dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="1dp"
+                android:layout_gravity="center_vertical"
                 app:cardCornerRadius="14dp">
 
                 <ImageView
@@ -34,33 +37,39 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="20dp"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/appDetailName_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    tools:text="Aplicacion" />
+
+                <TextView
+                    android:id="@+id/appDetailCategory_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    android:textSize="15sp"
+                    tools:text="Tipo" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:paddingTop="24dp"
-                    android:paddingRight="24dp">
+                    android:paddingTop="8dp">
 
-                    <TextView
-                        android:id="@+id/appDetailName_tv"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:inputType="textMultiLine"
-                        android:textSize="24sp"
-                        android:textStyle="bold"
-                        tools:text="Aplicacion" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="4dp"
-                    android:paddingRight="24dp">
+                    <ImageView
+                        android:id="@+id/riesgoIcon_iv"
+                        style="@style/RecyclerIconStyle"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginEnd="6dp"
+                        android:src="@drawable/circle" />
 
                     <TextView
                         android:id="@+id/numCves_tv"
@@ -68,51 +77,47 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:inputType="textMultiLine"
-                        android:textSize="15sp"
+                        android:textSize="16sp"
                         tools:text="X vulnerabilidades" />
-
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:paddingTop="4dp"
-                    android:paddingRight="24dp">
+                    android:paddingTop="2dp">
+
+                    <ImageView
+                        android:id="@+id/ecoIcon_iv"
+                        style="@style/RecyclerIconStyle"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginEnd="6dp"
+                        android:src="@drawable/energy_saving" />
 
                     <TextView
-                        android:id="@+id/appDetailCategory_tv"
+                        android:id="@+id/eco_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:inputType="textMultiLine"
-                        android:textColor="@color/primary"
-                        android:textSize="15sp"
-                        tools:text="Tipo" />
-
+                        android:textSize="16sp"
+                        tools:text="35/100 eco" />
                 </LinearLayout>
-
             </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
+        <Button
+            android:id="@+id/appAdd_bt"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/appAdd_bt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="24dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginBottom="2dp"
-                android:background="@drawable/button"
-                android:text="@string/dElement_detail_add"
-                android:textAllCaps="false" />
-
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/button"
+            android:text="@string/dElement_detail_add"
+            android:textAllCaps="false" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/assetDetailTL"
