Cambiar aspecto barra calificación ecológica

--- a/AppRiesgosPersonales/app/src/main/res/values/colors.xml
+++ b/AppRiesgosPersonales/app/src/main/res/values/colors.xml
@@ -30,6 +30,6 @@
     <color name="ecoGood">#B6E055</color>
     <color name="ecoExcelent">#5BB65F</color>
 
-    <color name="grey">#B4B1B1</color>
+    <color name="grey">#D5D4D4</color>
 
 </resources>
