--- a/AppRiesgosPersonales/app/src/main/res/drawable/shape_seek_bar_text_thumb.xml
+++ b/AppRiesgosPersonales/app/src/main/res/drawable/shape_seek_bar_text_thumb.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item> <!-- Base (tamaño) -->
         <shape android:shape="oval">
-            <solid android:color="@android:color/transparent" />
+            <solid android:color="@color/transparent" />
             <size
                 android:width="@dimen/thumb_size"
                 android:height="@dimen/thumb_size" />
@@ -10,10 +10,10 @@
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/transparent" /> <!-- Circulo -->
+            <solid android:color="@color/ecoPoor" /> <!-- Circulo -->
             <stroke
-                android:width="5dp"
-                android:color="@color/transparent" /> <!-- Borde -->
+                android:width="1dp"
+                android:color="@color/white" /> <!-- Borde -->
         </shape>
     </item>
 </layer-list>
