--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_eco.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_eco.xml
@@ -39,7 +39,7 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-                <es.unican.appriegospersonales.activities.apps.detail.tabs.TextThumbSeekBar
+                <es.unican.appriegospersonales.common.TextThumbSeekBar
                     android:id="@+id/seekBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -50,8 +50,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="6dp">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/pobre_tv"
@@ -59,6 +58,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/grey"
                         android:text="POBRE" />
 
                     <TextView
@@ -67,6 +68,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/grey"
                         android:text="JUSTO" />
 
                     <TextView
@@ -75,6 +78,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/grey"
                         android:text="BUENO" />
 
                     <TextView
@@ -83,6 +88,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/grey"
                         android:text="EXCELENTE" />
                 </LinearLayout>
             </LinearLayout>
