--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_smart_home.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_smart_home.xml
@@ -155,7 +155,7 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-                <es.unican.appriegospersonales.activities.apps.detail.tabs.TextThumbSeekBar
+                <es.unican.appriegospersonales.common.TextThumbSeekBar
                     android:id="@+id/seekBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -166,8 +166,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="6dp">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/pobre_tv"
@@ -175,6 +174,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/grey"
                         android:text="POBRE" />
 
                     <TextView
@@ -183,6 +184,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/grey"
                         android:text="JUSTO" />
 
                     <TextView
@@ -191,6 +194,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/grey"
                         android:text="BUENO" />
 
                     <TextView
@@ -199,6 +204,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/grey"
                         android:text="EXCELENTE" />
                 </LinearLayout>
             </LinearLayout>
