--- a/AppRiesgosPersonales/app/src/main/res/drawable/shape_seek_bar_text_thumb.xml
+++ b/AppRiesgosPersonales/app/src/main/res/drawable/shape_seek_bar_text_thumb.xml
@@ -10,7 +10,7 @@
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/ecoPoor" /> <!-- Circulo -->
+            <solid android:color="@color/seekBar0" /> <!-- Circulo -->
             <stroke
                 android:width="1dp"
                 android:color="@color/white" /> <!-- Borde -->
